added #all_same? and test

--- a/4-11-2021.md
+++ b/4-11-2021.md
@@ -81,3 +81,48 @@ end
 So this `#all_empty?` method is a new predicate method that combines `Enumerable#all?` and `Array#empty?`. 
 
 Obviously this will somehow be called on each element of the `Board` since the game board is an array of arrays. So this will probably be used in combination with `Array#each?`. 
+
+## now write a test
+If I write code, I should test it too. 
+
+Eventually the goal is to write tests first and then write the code. For now though, time to practice writing in `RSpec`. 
+
+```ruby
+#../spec/core_extensions_spec.rb (this is the location of the file)
+
+require_relative 'spec_helper'
+
+RSpec.describe Array do
+  context "#all_empty?" do
+    it "returns true if all elements of the Array are empty" do
+      expect(["","",""].all_empty?).to be true
+    end
+  end
+end
+```
+
+Shouldn't be any surprises here. 
+
+So, reflecting on this `#all_empty?` method, why is it being built? 
+
+1. it'll help determine if the game is over. If a row is empty, then it's not a draw...so that's one piece of logic
+
+Ok, moving on. 
+
+the next extensions to the `Array` class is going to be: `#all_same?`. Obviously this would be a good way to tell if a single row has all the same values. Like all "x"s or all "o"s. 
+
+```ruby
+def all_same?
+  self.all? { |element| element == self[0] }
+end
+```
+
+If this doesn't make sense then you should probably look at what: 
+
+* `self` 
+* `Enumerable#all?`
+
+That should clear it up for you. 
+
+Now that some code has been written, I want to make sure it does what I think it'll do, so write a test!
+
