--- a/4-11-2021.md
+++ b/4-11-2021.md
@@ -126,3 +126,4 @@ That should clear it up for you.
 
 Now that some code has been written, I want to make sure it does what I think it'll do, so write a test!
 
+YOU'RE A JACK ASSSSSSSSSSS
