--- a/4-12-2021.md
+++ b/4-12-2021.md
@@ -1,59 +1,57 @@
-CURRENT GOAL: define and test `#draw?` and `#winner?`  
-stretch goal: clean up 4-11-2021.md and prep for being an article
 
-# `#draw?`
 
-So, the logic of a draw situation in TicTacToe is pretty easy to describe: There are no empty spaces and no three-in a row across, diagonally or down. 
+# `Board#draw?`
+This method is kind of obvious: look at the Board object and determine if it's currently a draw. 
 
-so the idea of "three-in-a-row" is what's considered a winner.  
+The logic of a draw situation in a game of TicTacToe is pretty easy to describe with words:
 
-the idea of a winner is going to be coded for next, so I don't really need to fuss over the idea of "is there a winner on a full board?". All I really need to do is mash all the rows of the `board` into a single array, and then look at the results with a call to `#none_empty?`. And if `#none_empty?` returns `true`, then I know that the game is a draw. 
+>A draw happens when there are no empty spaces and no three-in-a-row across, diagonally or down. 
 
-I hope that logic makes sense.  
+The idea of a winner is going to be coded for further along, so I don't really need to fuss over the idea of "is there a winner on a full board?". 
 
-So here's the code for testing for a draw (of course, this would happen after the `board` has been reviewed for a winner): 
+So the `#draw?` method will test a completely full board. Since the `#draw?` method will be called *AFTER* the `#winner?` method, I don't need to worry about a full board having a winner on it. The `#draw?` method is just confirming that a full board doesn't have a winner.
+
+
+So then all I really need to do is mash all the rows of the `board` into a single, one-dimensional array, and then look at the results with a call to `#none_empty?`. And if `#none_empty?` returns `true`, then I know that the game is a draw. 
+
+I hope that logic makes sense; here's the code for it:
 
 ```ruby
 def draw?
   grid.flatten.map { |cell| cell.value }.none_empty? 
 end
 ```
+<br><br>
+Couple of things to say about this method:
 
-Couple of things to say about this method: 
-
-1. Remember, this is back to being an instance method for the `Board` class. So it will have access to the instance variable `@grid`. 
+1. It's an instance method for the `Board` class. So it will have access to the instance variable `@grid`
+   
 2. The `@grid` will be composed of `Cell` objects, which will respond to the `#value` method (remember, `#value` is an instance method of the `Cell` class. `Cell#value` and can be seen in `/cell.rb`)
+   
 3. `#flatten` and `#map` are built in methods already; check the documentation for how to use them
-4. this is using `#none_empty?` which is a monkey patched method, specific only to my program here and extending Ruby for my purposes  
+   
+4. this is using `#none_empty?` which is a monkey patched method, specific only to my program here and extending Ruby for my purposes  <br><br><br>
+  
+A quick note about Monkey Patching:  
+*It's entirely possible that there is some naming issues; For example, if this Gem was a real Gem and was used with a different Gem that also extended the Ruby language using a similar method name of `none_empty?`, or `all_same?` etc. But that's unlikely. And if I ran into that situation, I'd probably be a much better programmer at that time and would be able to identify why there's an issue. So not a big deal right now, but it's good to acknowledge the possibility.*  <br><br>
 
-It's entirely possible that there is some naming issues; For example, if this Gem was a real Gem and was used with a different Gem that also extended the Ruby language using a similar method name. But that's unlikely. And if I ran into that situation, I'd probably be a much better programmer at that time. So not a big deal. 
-
-Ok, current goal was not met. So can come back to this one and pick up here. Stretch goal is a good one, because it's scope should be refined. 
-
-CURRENT GOAL: SAME AS ABOVE  
-*stretch goal: same as above*
-
-## THERE ARE SO MANY THINGS THAT COULD BECOME THEIR OWN STAND ALONE LITTLE LESSONS! 
-
-Now that `#draw?` is defined....should I test it? Well not yet. testing a situation where a game ends in a draw will require a lot more of "pseudo-code" in the test...and I don't really know how to do that efficiently. The tutorial will teach me how to do that. 
-
-So the next thing to do is: 
+## Conclusion
+Now that `#draw?` is defined, i'd expect to write some tests for it. However, `#draw?` relies on using an instance variable of `@grid`, and getting it's values, and also of looking at the indvidual objects that it contains (specifically, a `Board@grid` will contain `Cell` objects). Since I don't know how to write a test for a `Board` class WHILE USING A `Cell` CLASS OBJECT, I'm not going to write a test for `#draw?`. The tutorial doesn't write any tests for `#draw?`. However, after writing the tests for `#game_over` which is coming up, it could be a good thing to return to the `#draw?` method, and test it using the `Struct` objects that will be discussed later.  <br><br>
 
 # `#winner?`
 
-So, before I attempt to tackle the `#winner?` method, I need to verbalize how to look at a tic tac toe board and determine if there's a winner. Which I've sort of already done...
+Before I attempt to tackle the `#winner?` method, verbalize how to look at a tic tac toe board and determine if there's a winner:
 
 > a player win's tic tac toe when they get three in a row, horizontally, vertically or diagonally
 
-Ok, then how do I do that when looking at the `board` object? 
+Ok, then how do I turn that into logic when looking at the `board` object? 
 
-Well, imagining a ticTacToe board with like, 3 Xs across the top is the most obvious thing. So then the idea is that the first `Array` returns `true` when `#all_same?` is called upon it. And `#all_same?` is a method I wrote to extend the `Array` class of Ruby. So that's easy to understand. 
+1. 3 Xs or Os in a row is the most obvious thing
+2. Next would be 3-in-a-row vertically
+3. Next is if there's 3-in-a-row diagonally
 
-Next would be 3-in-a-row vertically. 
 
-How the heck would I determine if that were true? 
 
-This is where things get a little confusing. But I'll break it down. 
 
 So, this is how the program is going to determine if there's a winner:
 
@@ -63,4 +61,63 @@ So, this is how the program is going to determine if there's a winner:
 
 all those different things (the rows, the transposed columns, and the diagonals) will all be arrays. All those arrays will be put in one big Array, and then each of those possible WINNING POSITIONS will be evaluated (as arrays, one at a time). 
 
+```ruby
+  def winning_positions
+    grid + grid.transpose + diagonals
+  end
 
+  def diagonals
+    [
+      [get_cell(0,0), get_cell(1,1), get_cell(2,2)],
+      [get_cell(0,2), get_cell(1,1), get_cell(2,0)]
+    ]
+  end
+```
+
+NEXT POMODORO GOAL: write the `#winner?` method  
+*stretch goal: clean up 4-11-2021.md*
+
+```ruby
+def winner?
+  winning_positions.each do |winning_position|
+    next if winning_position_values(winning_position).all_empty?
+    return true if winning_position_values(winning_position).all_same?
+  end
+  false
+end
+
+def winning_position_values(winning_position)
+  winning_position.map { |cell| cell.value }
+end
+```
+
+
+
+# Testing the `#winner?` and `#draw?` methods via the `#game_over` method
+I think this will be a larger section. But really it just looks like the entire tests are extrapolated in the tutorial. 
+
+And again, this uses `Struct`. Which is something I wrote about recently. 
+
+A `Struct` is a way to fake an object, with instance variables and/or instance methods. At least, in the Test environment. And since the test environment of RSpec is written in Ruby, a `Struct` can probably be used in Ruby code. But I won't worry about that right now. 
+
+Ok. Keep going. 
+
+```ruby
+TestCell = Struct.new(:value)
+```
+
+Instead of doing the entire chuck of code in one shot...i'm going to try and break it a part, and do it line by line...because this is sort of an important concept that I've been through once, and I sort of understood it that time. This time I really want to grasp what's going on, because it's really helpful, i think. 
+
+The conversation I want to have again is about `Struct`. 
+
+a `Struct` is like... a construct.... something constructed....a temporary `Structure`....for the sake of testing. 
+
+The point of using a `Struct` is to "fake" an object in another part of a program that I don't necessarily have easy access to. 
+
+The `Struct` is used when writing a test, because it's maybe quicker to write a `Struct` for a test. And I think that's what this tutorial is doing. 
+
+Yeah, so, with a `Struct` I can fake an object. And then I can write code in the `*_spec.rb` file and the test environment will use those `Struct` objects...as opposed to needing to use the actual object from my code. 
+
+The reason I had to use the `Struct` when testing the `Board#game_over` was because I needed to access the `Cell#value`...but I didn't want to actually have to use a `Cell`....because the `Struct` is actually taking place of a very basic object....the `Cell` object. Because a `Cell` object is simply a `String`. Nothing more. 
+
+Honestly, there are so many lessons here. So much that could be expanded into their own articles. Simple as that.  
