--- a/4-13-2021.md
+++ b/4-13-2021.md
@@ -3,3 +3,4 @@ CURRENT GOAL: edit 4-12-2021.md file
 
 CURRENT GOAL: FINISH THE GAME CLASS
 
+The testing for the `game#initialize` method that sets the current player and other player should be updated to something more recent for RSpec 3.10. But I don't know what it is. 
