prevent overwriting moves

--- a/markdown/4-17-2021.md
+++ b/markdown/4-17-2021.md
@@ -138,3 +138,41 @@ But what did i do? I used an until loop. Easy.
 But I also used an until loop with a new method I wrote. 
 
 Now how did I write that method? 
+
+So that's something that I should be writing about. 
+
+# adding a feature
+I wrote the Gem. But the program is fragile. there's a couple of things that need to be fixed. 
+
+For instance, I can overwrite a square that's already been played. 
+
+So then I need to figure out some way to fix that. 
+
+The way I look at the program is like, there's all the code...and then there's the engine that makes it all run. 
+
+In this case, the Gem has a `Game` class, and the `Game` class has a `#play` method. So that's where I needed to look to figuring out what was going on. And where I would put my fix. 
+
+I don't really know "what" i'm going to do to fix the program. Like, I don't know "how" or "what" to write...but I can put my brain to work on that problem while I do other things. 
+
+So I look at the engine. Because the engine is already written for me. So I look at the engine and I look at it step by step, line by line. And I locate where I'd want to add some piece of code to validate the information from the user. 
+
+I identify that there is a place between two steps. And I wrte a method. 
+
+but then, I wrote tests for it. adn I don't really know what I did wiht the tests. And it's not really a good test. So I need to look at it closer. 
+
+Here's my method: 
+
+```ruby
+def valid_move?(x, y)
+  board.get_cell(x, y).value == "" ? true : false
+end
+```
+
+Now, here's where I think I'm going wrong. I'm calling another object in my `Game` class method. I'm calling a `Board` class object in my `Game` class method. And the `Board` class object populates with a `Cell` class object. 
+
+so that's hwere I should start looking for answer, on the `Board` class tests. 
+
+Because I want to see how the tests deal with creating an object with another object. 
+
+
+How would I re-write `Game#valid_move?` so it's not using the `Board` object? 
