--- a/markdown/4-19-2021.md
+++ b/markdown/4-19-2021.md
@@ -117,3 +117,5 @@ I mean, this uses methods that have already been created and tested, and simply 
 I wonder if I could re-factor this to be one line. Not succinctly. 
 
 Now, what if I were to label the grid with the numbers of the boxes? 
+
+That was never something I thought to do: to create issues for myself. 
